objects/ssot__DedupEngmtAnlssTextInsightAssoc__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DedupEngmtAnlssTxtInsightId__c</fullName>
        <label>Dedup Engmt Anlss Txt Insight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeletedAt__c</fullName>
        <label>DeletedAt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceFromCenterNumber__c</fullName>
        <label>Distance From Center</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementAnalysisTextInsightId__c</fullName>
        <label>Engagement Analysis Text Insight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Dedup Engmt Anlss Txt Insight Assoc Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1738863308600_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DedupEngmtAnlssTextInsightAssoc_Enga_rel</label>
        <referenceTo>ssot__EngagementAnalysisTextInsight__dlm</referenceTo>
        <relationshipLabel>DedupEngmtAnlssTextInsightAssoc_Enga_rel</relationshipLabel>
        <relationshipName>rel_1738863308600_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1738863318689_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DedupEngmtAnlssTextInsightAssoc_Dedu_rel</label>
        <referenceTo>ssot__DedupEngmtAnlssTextInsight__dlm</referenceTo>
        <relationshipLabel>DedupEngmtAnlssTextInsightAssoc_Dedu_rel</relationshipLabel>
        <relationshipName>rel_1738863318689_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>